# RadianceFleet

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  docker-compose.yente.yml  docker-compose.yml  lefthook.yml  railway.toml
backend/: alembic.ini  migrate_to_pg.py  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  cli.py  cli_app.py  cli_archive.py  cli_db.py  cli_export.py  cli_helpers.py  cli_history.py  cli_psc.py  cli_update.py  cli_vessels.py  cli_worker.py  config.py  database.py  logging_config.py  main.py
backend/app/api/: _helpers.py  routes.py  routes_admin.py  routes_alerts.py  routes_archival.py  routes_behavioral_baseline.py  routes_cases.py  routes_collaboration.py  routes_detection.py  routes_embed.py  routes_explainability.py  routes_exports.py  routes_fp_tuning.py  routes_health.py  routes_jamming_zones.py  routes_notification_rules.py  routes_ownership_network.py  routes_public.py  routes_spire.py  routes_sse.py  routes_sse_unified.py  routes_sts_hotspots.py  routes_trajectory_pca.py  routes_vessels.py
backend/app/models/: __init__.py  ais_archive_batch.py  ais_observation.py  ais_point.py  alert_edit_lock.py  alert_group.py  alert_subscription.py  analyst.py  api_key.py  audit_log.py  base.py  calibration_event.py  case_activity.py  case_alert.py  case_analyst.py  collection_run.py  convoy_event.py  corridor.py  corridor_gap_baseline.py  corridor_scoring_override.py  crea_voyage.py  dark_zone.py  data_coverage_window.py  draught_event.py  evidence_card.py  export_run.py  export_subscription.py  flag_risk_profile.py  fleet_alert.py  fp_rate_snapshot.py  gap_event.py  ground_truth.py  handoff_note.py  ingestion_status.py  insurance_gap_event.py  investigation_case.py  isolation_forest_anomaly.py  jamming_zone.py  loitering_event.py  merge_candidate.py  (+44 more)
backend/app/modules/: ais_archiver.py  ais_reporting_anomaly_detector.py  aishub_client.py  aisstream_client.py  aisstream_worker.py  alert_dedup_engine.py  analyst_presence.py  auto_assignment.py  barentswatch_client.py  behavioral_baseline_detector.py  bulk_satellite_manager.py  cargo_inference.py  case_grouper.py  circle_classifier.py  circuit_breakers.py  collaboration_notifier.py  collection_scheduler.py  collection_sources.py  confidence_classifier.py  convoy_detector.py  copernicus_client.py  corridor_correlator.py  coverage_tracker.py  crea_client.py  cross_receiver_detector.py  dark_vessel_discovery.py  data_fetcher.py  datalastic_client.py  dbscan_trajectory_detector.py  destination_detector.py  digitraffic_client.py  dma_client.py  (+92 more)
backend/scripts/: generate_sample_data.py  seed_ports.py
backend/static/: index.html
backend/tests/: conftest.py  test_ais_archiver.py  test_ais_cargo_type.py  test_ais_class_inference.py  test_ais_reporting_anomaly_detector.py  test_aisstream_client.py  test_aisstream_worker.py  test_alert_assignment.py  test_alert_dedup.py  test_alert_enrichment.py  test_alert_enrichment_contract.py  test_alert_patterns.py  test_alert_verdict.py  test_analyst_auth.py  test_analyst_collaboration.py  test_api_alerts.py  test_api_consistency.py  test_api_endpoints.py  test_api_integration.py  test_api_vessels.py  test_audit_coverage.py  test_audit_log_api.py  test_auto_assignment.py  test_auto_calibration.py  test_barentswatch_client.py  test_behavioral_baseline_detector.py  test_bulk_satellite.py  test_capella_client.py  test_cargo_inference.py  test_case_collaboration.py  test_circle_classifier.py  test_circuit_breakers.py  test_cli.py  test_collaboration_notifier.py  test_collection_integration.py  test_collection_scheduler.py  test_collection_sources.py  test_confidence_classifier.py  test_config_validation.py  test_corridor.py  (+191 more)
(+352 files in other folders)
