[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radiancefleet"
version = "0.1.0"
description = "Open source maritime anomaly detection for shadow fleet triage"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "geoalchemy2>=0.15.0",
    "shapely>=2.0.0",
    "polars>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "alembic>=1.14.0",
    "rich>=13.9.0",
    "rapidfuzz>=3.0.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
radiancefleet = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
